MediaWiki theme: Fix PHP CheckboxMultiselectInputWidget/RadioSelectInputWidget option spacing
Follow-up to 0e6c4b89ceeb95f7953bf7933b3c374c51da8cba, which
accidentally caused the spacing between the options of the
PHP version of these widgets to increase to insane levels.

--- a/src/themes/mediawiki/widgets.less
+++ b/src/themes/mediawiki/widgets.less
@@ -510,7 +510,7 @@
 
 .theme-oo-ui-checkboxMultiselectInputWidget () {
 	.oo-ui-fieldLayout {
-		margin-bottom: 0;
+		margin-top: 0;
 
 		.oo-ui-fieldLayout-body {
 			padding: 0.25em 0;
@@ -696,7 +696,7 @@
 
 .theme-oo-ui-radioSelectInputWidget () {
 	.oo-ui-fieldLayout {
-		margin-bottom: 0;
+		margin-top: 0;
 
 		.oo-ui-fieldLayout-body {
 			padding: 0.25em 0;
